--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ sass:
   sass_dir: _sass
 plainwhite:
   name: Daehyun	Kang
-  tagline: IULab	master's	student
+  tagline: IULab master's student
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
   search: true # set to true to enable searchbar
@@ -26,9 +26,9 @@ plainwhite:
     - post
   # generate social links in footer
   social_links:
-    twitter: samarsault
+    #twitter: samarsault
     github: Daehyun41
-    linkedIn: in/samarsault
+    #linkedIn: in/samarsault
     #dribbble: jekyll
     #flickr: jekyll
     #instagram: jekyll
@@ -38,7 +38,7 @@ plainwhite:
     #soundcloud: jekyll
     #telegram: jekyll
     #gitlab: jekyll
-    #email: eoen5131@naver.com
+    email: eoen5131@naver.com
 
     # Mastodon instances
     # mastodon:
